Fix logo icon on Firefox

--- a/website/css/app.sass
+++ b/website/css/app.sass
@@ -34,7 +34,7 @@ $yellow: #728C23
   width: 128px
 
 .nav-item img
-  padding-left: 12px
+  margin-left: 12px
   margin-right: 6px
 
 .image.is-screenshot img
